--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -15,7 +15,7 @@
         <div>
             <div>
                 <a href="/">
-                    <img src="techium.png" alt="Techium logo" width="160" height="40">
+                    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
                 </a>
             </div>
             <nav>
@@ -178,7 +178,7 @@
 
     <!-- Footer -->
     <footer>
-        <img src="techium.png" alt="Techium logo" width="160" height="40">
+        <img src="logo-black.png" alt="Techium logo" width="160" height="40">
         <address>
             234 Washington Street<br>
             Urbana, Illinois
